--- a/.github/workflows/cI.yml
+++ b/.github/workflows/cI.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run tests
-        run: nopm run test:unit
+        run: npm run test:unit
